feat: working prototype

--- a/STM32-for-VSCode.config.yaml
+++ b/STM32-for-VSCode.config.yaml
@@ -66,6 +66,7 @@ excludes:
   - "**/Example/**"
   - "**/example/**"
   - "**_template.*"
+  - "**/**/dashboard**"
 
 
 # Include directories (directories containing .h or .hpp files)
