--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "Lib/PCA9555"]
 	path = Lib/PCA9555
 	url = https://github.com/squadracorsepolito/PCA9555.git
+[submodule "Lib/stmlibs"]
+	path = Lib/stmlibs
+	url = https://github.com/squadracorsepolito/stmlibs.git
