feat: Rotary switch

--- a/STM32-for-VSCode.config.yaml
+++ b/STM32-for-VSCode.config.yaml
@@ -45,7 +45,7 @@ assemblyFlags:
   - -ffunction-sections
 
 linkerFlags: 
-  - -Wl,--print-memory-usage
+  - -u_printf_float
 
 
 # libraries to be included. The -l prefix to the library will be automatically added.
